--- a/taxistas.html
+++ b/taxistas.html
@@ -70,8 +70,8 @@
                     </div>
                     <div class="mar_mod">
                         <img class="img_mar_mod" src="images/auto.png" alt="">
-                        <input class="controls_usuario" type="text" name="marca_carro" id="marca" placeholder="Ingrese marca del veh&iacute;culo">
-                        <input class="controls_apellido" type="text" name="modelo_carro" id="modelo" placeholder="Ingrese modelo del veh&iacute;culo">
+                        <input class="controls_usuario" type="text" name="marca" id="marca" placeholder="Ingrese marca del veh&iacute;culo">
+                        <input class="controls_apellido" type="text" name="modelo" id="modelo" placeholder="Ingrese modelo del veh&iacute;culo">
                     </div>
                     <div class="matricula">
                         <img class="img_matricula" src="images/matricula.png" alt="">
