--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -82,8 +82,8 @@
     <section class="form_clientes">
         <form id="form-bajar-respaldo">
             <div class="clase" align="left">
-                <button id="consultar_carro" input="submit" value="AGREGAR" class="botons">
-                    <h2 class="prb"> DESCARGAR RESPALDO </h2>
+                <button id="consultar_carro" class="botons">
+                    <h2 class="prb">DESCARGAR RESPALDO</h2>
                 </button>
                 <hr>
             </div>
@@ -101,6 +101,7 @@
     <br><br>
     <br><br>
     <script src="js/script.js"></script>
+    <script src="js/respaldo.js"></script>
     <footer id="footer">
         Copyright 2022. Todos los derechos reservados <br>
         Maracaibo, EDO Zulia, Venezuela <br>
