--- a/taxistas.html
+++ b/taxistas.html
@@ -62,7 +62,7 @@
                     <br>
                     <div class="ano">
                         <img class="img_ano" src="images/ano.png" alt="">
-                        <input class="controls" type="text" name="ano_carro" id="ano" placeholder="Ingrese año del veh&iacute;culo">
+                        <input class="controls" type="number" name="year" id="ano" placeholder="Ingrese año del veh&iacute;culo">
                     </div>
                     <div class="capacidad">
                         <img class="img_capacidad" src="images/capacidad.png" alt="">
@@ -75,7 +75,7 @@
                     </div>
                     <div class="matricula">
                         <img class="img_matricula" src="images/matricula.png" alt="">
-                        <input class="controls" type="text" name="mat_carro" id="matricula" placeholder="Ingrese matricula del veh&iacute;culo">
+                        <input class="controls" type="text" name="matricula" id="matricula" placeholder="Ingrese matricula del veh&iacute;culo">
                     </div>
                     <span class="error-text" id="taxista-error-text"></span>
                     <div class="clase">
