--- a/taxistas.html
+++ b/taxistas.html
@@ -44,16 +44,17 @@
                     <h4 class="titulo_form"> AGREGAR TAXISTA</h4>
                     <div class="usuario">
                         <img class="img_avatar" src="images/avatar.png" alt="">
-                        <input class="controls_usuario" type="text" name="nombre_taxista" id="nombre_taxista" placeholder="Ingrese nombre del taxista">
-                        <input class="controls_apellido" type="text" name="apellido_taxista" id="apellido" placeholder="Ingrese apellido del taxista">
+                        <input class="controls" type="number" name="cedula" placeholder="Ingrese c&eacute;dula del taxista">
+                        <input class="controls_usuario" onkeypress="return check(event)" type="text" name="nombre" placeholder="Ingrese nombre del taxista">
+                        <input class="controls_apellido" onkeypress="return check(event)" type="text" name="apellido" placeholder="Ingrese apellido del taxista">
                     </div>
                     <div class="telefono">
                         <img class="img_telefono" src="images/telefono.png" alt="">
-                        <input class="controls" type="text" name="text" id="tlf_taxista" placeholder="Ingrese telefono del taxista">
+                        <input class="controls" type="text" name="telefono id="tlf_taxista" placeholder="Ingrese tel&eacute;fono del taxista">
                     </div>
                     <div class="direccion">
                         <img class="img_direccion" src="images/ubicacion.png" alt="">
-                        <input class="controls" type="text" name="dir_taxista" id="ubicacion" placeholder="Ingrese direccion del taxista">
+                        <input class="controls" type="text" name="direccion" id="ubicacion" placeholder="Ingrese direcci&oacute;n del taxista">
                     </div>
                     <hr>
                     <br>
