--- a/taxistas.html
+++ b/taxistas.html
@@ -43,8 +43,11 @@
                 <section class="form_clientes">
                     <h4 class="titulo_form"> AGREGAR TAXISTA</h4>
                     <div class="usuario">
-                        <img class="img_avatar" src="images/avatar.png" alt="">
+                        <img class="img_cedula" src="images/cedula.png" alt="">
                         <input class="controls" type="number" name="cedula" placeholder="Ingrese c&eacute;dula del taxista">
+                    </div>
+                    <div class="usuario">
+                        <img class="img_avatar" src="images/avatar.png" alt="">
                         <input class="controls_usuario" onkeypress="return check(event)" type="text" name="nombre" placeholder="Ingrese nombre del taxista">
                         <input class="controls_apellido" onkeypress="return check(event)" type="text" name="apellido" placeholder="Ingrese apellido del taxista">
                     </div>
