--- a/taxistas.html
+++ b/taxistas.html
@@ -53,7 +53,7 @@
                     </div>
                     <div class="telefono">
                         <img class="img_telefono" src="images/telefono.png" alt="">
-                        <input class="controls" type="text" name="telefono id="tlf_taxista" placeholder="Ingrese tel&eacute;fono del taxista">
+                        <input class="controls" type="text" name="telefono" placeholder="Ingrese tel&eacute;fono del taxista">
                     </div>
                     <div class="direccion">
                         <img class="img_direccion" src="images/ubicacion.png" alt="">
