--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -60,7 +60,6 @@
                 <br>
                 <form id="form-new-password">
                     <h4 class="titulo_form"> NUEVA CONTRASEÑA</h4>
-                    <p>(Al generar una nueva contraseña se eliminaran todos los datos registrados)</p>
                     <div class="cedula">
                         <img class="img_cedula" src="images/cedula.png" alt="">
                         <input class="controls" type="password" name="contraseña_nueva" id="cedula" placeholder="Ingrese su nueva contraseña">
@@ -83,8 +82,8 @@
     <section class="form_clientes">
         <form id="form-bajar-respaldo">
             <div class="clase" align="left">
-                <button id="consultar_carro" input="submit" value="AGREGAR" class="botons">
-                    <h2 class="prb"> DESCARGAR RESPALDO </h2>
+                <button id="consultar_carro" class="botons">
+                    <h2 class="prb">DESCARGAR RESPALDO</h2>
                 </button>
                 <hr>
             </div>
@@ -102,6 +101,7 @@
     <br><br>
     <br><br>
     <script src="js/script.js"></script>
+    <script src="js/respaldo.js"></script>
     <footer id="footer">
         Copyright 2022. Todos los derechos reservados <br>
         Maracaibo, EDO Zulia, Venezuela <br>
