--- a/carros.html
+++ b/carros.html
@@ -46,7 +46,8 @@
                         <input class="controls_usuario" type="number" name="id_carro" id="id-carro" placeholder="Ingrese el ID del carro">
                         <input class="controls_apellido" type="text" name="matricula" id="marca_carro" placeholder="Ingrese la matr&iacute;cula del carro">
                     </div>
-                    <p></p>
+                    <span class="error-text" id="carro-get-error-text"></span>
+                    <p class="response" id="carro-get-response"></p>
                     <div class="clase" align="left">
                         <button id="consultar_carro" input="submit" value="AGREGAR" class="botons">
                             <h2 class="prb"> CONSULTAR </h2>
