--- a/carros.html
+++ b/carros.html
@@ -98,7 +98,7 @@
         <br><br>
         <br><br>    
     </form>
-    <script src="js/script.js"></script>
+    <script src="js/carros.js"></script>
     <footer id="footer">
         Copyright 2022. Todos los derechos reservados <br>
         Maracaibo, EDO Zulia, Venezuela <br>
