--- a/carros.html
+++ b/carros.html
@@ -43,7 +43,7 @@
                     <h4 class="titulo_form"> CONSULTAR / ELIMINAR CARRO</h4>
                     <div class="mar_mod">
                         <img class="img_mar_mod" src="images/auto.png" alt="">
-                        <input class="controls_usuario" type="number" name="id_carro" id="id-carro" placeholder="Ingrese el ID del carro">
+                        <input class="controls_usuario" type="number" name="ID" id="id-carro" placeholder="Ingrese el ID del carro">
                         <input class="controls_apellido" type="text" name="matricula" id="marca_carro" placeholder="Ingrese la matr&iacute;cula del carro">
                     </div>
                     <span class="error-text" id="carro-get-error-text"></span>
