--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -62,8 +62,12 @@
                 <form id="form-new-password">
                     <h4 class="titulo_form"> NUEVA CONTRASEÑA</h4>
                     <div class="cedula">
+                        <img class="img_cedula" src="images/avatar.png" alt="">
+                        <input class="controls" type="text" name="email" placeholder="Ingrese su nueva contraseña">
+                    </div>
+                    <div class="cedula">
                         <img class="img_cedula" src="images/cedula.png" alt="">
-                        <input class="controls" type="password" name="contraseña_nueva" id="cedula" placeholder="Ingrese su nueva contraseña">
+                        <input class="controls" type="password" name="password" placeholder="Ingrese su nueva contraseña">
                     </div>
                     <div class="clase">
                         <button input="submit" value="AGREGAR" class="botons">
