--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -49,6 +49,7 @@
                         <input class="controls_usuario" type="password" name="old_password" placeholder="Ingrese su contraseña actual">
                         <input class="controls_apellido" type="password" name="new_password" placeholder="Ingrese su nueva contraseña">
                     </div>
+                    <span class="error-text" id="password-get-error-text"></span>
                     <div class="clase">
                         <button id="change_password" class="botons">
                             <h2 class="prb"> GUARDAR </h2>
