--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -70,9 +70,11 @@
                         <img class="img_cedula" src="images/cedula.png" alt="">
                         <input class="controls" type="password" name="password" placeholder="Ingrese su nueva contraseña">
                     </div>
+                    <span class="error-text" id="newpassword-get-error-text"></span>
+                    <p class="response" id="newpassword-get-response"></p>
                     <div class="clase">
-                        <button input="submit" value="AGREGAR" class="botons">
-                            <h2 class="prb"> GUARDAR </h2>
+                        <button class="botons">
+                            <h2 class="prb">GUARDAR</h2>
                         </button>
                     </div>
                 </form>
