--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -61,10 +61,10 @@
                 <hr>
                 <br>
                 <form id="form-new-password">
-                    <h4 class="titulo_form"> NUEVA CONTRASEÑA</h4>
+                    <h4 class="titulo_form">NUEVA CONTRASEÑA</h4>
                     <div class="cedula">
                         <img class="img_cedula" src="images/avatar.png" alt="">
-                        <input class="controls" type="text" name="email" placeholder="Ingrese su nueva contraseña">
+                        <input class="controls" type="email" name="email" placeholder="Ingrese el nuevo usuario">
                     </div>
                     <div class="cedula">
                         <img class="img_cedula" src="images/cedula.png" alt="">
@@ -90,9 +90,9 @@
     <section class="form_clientes">
         <form id="form-bajar-respaldo">
             <div class="clase" align="left">
-                <button id="consultar_carro" class="botons">
+                <a href="https://livecarapi.herokuapp.com/respaldo" download class="botons">
                     <h2 class="prb">DESCARGAR RESPALDO</h2>
-                </button>
+                </a>
                 <hr>
             </div>
         </form>
