--- a/login.html
+++ b/login.html
@@ -18,8 +18,9 @@
       <input type="email" placeholder="&#128272; Correo" name="email" id="email">
       <input type="password" placeholder="&#128272; Contraseña" name="password" minlength="5" maxlength="12" id="password">
       <span id="error-text"></span>
-      <input  type="submit"  value="Ingresar" name="boton_enviar" id="login_button">
-      <br>   
+      <input  type="submit" value="Ingresar" id="login_button">
+      <br>
+      <button class="olvidar_contra" id="reset_password">¿Olvidaste la contraseña?</button>
     </form>
     <script src="js/login.js"></script>
   </body>
