--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -64,7 +64,7 @@
                     <h4 class="titulo_form"> NUEVA CONTRASEÑA</h4>
                     <div class="cedula">
                         <img class="img_cedula" src="images/avatar.png" alt="">
-                        <input class="controls" type="text" name="email" placeholder="Ingrese su nueva contraseña">
+                        <input class="controls" type="email" name="email" placeholder="Ingrese el nuevo usuario">
                     </div>
                     <div class="cedula">
                         <img class="img_cedula" src="images/cedula.png" alt="">
