--- a/servicios.html
+++ b/servicios.html
@@ -102,7 +102,7 @@
             <h4 class="titulo_form">CONSULTAR / ANULAR SERVICIOS</h4>
             <div class="servicio_c">
                 <img class="img_cons_servicio" src="images/servicio.png" alt="">
-                <input class="controls_usuario_con" type="text" name="nombres" id="nombre" placeholder="Ingrese el ID del servicio">
+                <input class="controls_usuario_con" type="number" name="ID" placeholder="Ingrese el ID del servicio">
                 <p></p>
                 <div class="clase" align="left">
                     <button class="botons">
