--- a/servicios.html
+++ b/servicios.html
@@ -103,7 +103,8 @@
             <div class="servicio_c">
                 <img class="img_cons_servicio" src="images/servicio.png" alt="">
                 <input class="controls_usuario_con" type="number" name="ID" placeholder="Ingrese el ID del servicio">
-                <p></p>
+                <span class="error-text" id="serv-get-error-text"></span>
+                <p class="response" id="serv-get-response"></p>
                 <div class="clase" align="left">
                     <button class="botons">
                     <h2 class="prb">CONSULTAR</h2>
